//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt Int
  updatedAt Int
  email String [unique, not null]
  name String
  avatar String
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  Notification Notification [not null]
}

Table TicketType {
  id Int [pk, increment]
}

Table Ticket {
  id Int [pk, increment]
  createdAt Int [not null]
  updatedAt Int [not null]
  title String [not null]
  content String [not null]
}

Table Template {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  content String [not null]
}

Table Comment {
  id Int [pk, increment]
  createdAt Int [not null]
  updatedAt Int [not null]
  content String [not null]
}

Table Notification {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  body String [not null]
  userId Int [not null]
  User User [not null]
}

Table OcrType {
  id Int [pk, increment]
  type String [not null]
  Ocr Ocr [not null]
}

Table Ocr {
  id Int [pk, increment]
  createdAt Int [not null]
  updatedAt Int [not null]
  content String [not null]
  type OcrType [not null]
  ocrTypeId Int [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Notification.userId > User.id

Ref: Ocr.ocrTypeId > OcrType.id